Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
The following compute functions do not support fixed_size_binary but do support binary:
- binary_length
- binary_replace_slice
- count_substring
- find_substring
- find_substring_regex
- equal
- greater
- greater_equal
- less
- less_equal
Attachments
Issue Links
- is related to
-
ARROW-14331 [C++][Compute] Add fixed_size_binary support to more compute functions
- Open
-
ARROW-13879 [C++] Mixed support for binary types in regex functions
- Resolved
- links to