ARROW-13878: [C++] Implement fixed_size_binary support in several kernels